// Vitest Snapshot v1

exports[`Component: ModalPickerOpener > ui > with values 1`] = `
<div>
  <div
    class="d-flex align-items-center"
  >
    <span>
      ADMIN@42.NL
    </span>
    <u
      class="align-self-center clickable fw-lighter ms-3"
      role="button"
    >
      Clear
    </u>
    <button
      class="flex-grow-0 flex-shrink-0 ms-3 btn btn-primary"
      type="button"
    >
      Best friend
    </button>
  </div>
</div>
`;

exports[`Component: ModalPickerOpener > ui > without values 1`] = `
<div>
  <div
    class="d-flex align-items-center"
  >
    <button
      class="flex-grow-0 flex-shrink-0 btn btn-primary"
      type="button"
    >
      Best friend
    </button>
  </div>
</div>
`;
